--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"       : "inflection",
-  "version"    : "1.2.0",
+  "version"    : "1.2.1",
   "description": "A port of inflection-js to node.js module",
   "keywords"   : [
     "inflection", "inflections", "inflection-js", "pluralize" , "singularize",
@@ -8,6 +8,11 @@
     "demodulize", "tableize", "classify", "foreign_key", "ordinalize"
   ],
   "author"         : "dreamerslab <ben@dreamerslab.com>",
+  "contributors": [
+    { "name": "Ryan Schuft", "email": "ryan.schuft@gmail.com" },
+    { "name": "Ben Lin", "email": "ben@dreamerslab.com" },
+    { "name": "Lance Pollard", "email": "lancejpollard@gmail.com" }
+  ],
   "dependencies"   : {},
   "devDependencies": {
     "node.flow": "1.1.1",
