--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"       : "inflection",
-  "version"    : "1.3.2",
+  "version"    : "1.3.3",
   "description": "A port of inflection-js to node.js module",
   "keywords"   : [
     "inflection", "inflections", "inflection-js", "pluralize" , "singularize",
@@ -19,7 +19,7 @@
   "dependencies"   : {},
   "devDependencies": {
     "node.flow": "1.2.3",
-    "should"   : "2.1.1"
+    "should"   : "3.0.1"
   },
   "main"      : "./lib/inflection.js",
   "repository": {
@@ -30,5 +30,8 @@
   "licenses": [{
     "type": "MIT",
     "url" : "http://en.wikipedia.org/wiki/MIT_License"
-  }]
+  }],
+  "scripts": {
+    "test" : "node test/run.js"
+  }
 }
