--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"       : "inflection",
-  "version"    : "1.3.3",
+  "version"    : "1.3.4",
   "description": "A port of inflection-js to node.js module",
   "keywords"   : [
     "inflection", "inflections", "inflection-js", "pluralize" , "singularize",
@@ -13,13 +13,14 @@
     { "name": "Ben Lin", "email": "ben@dreamerslab.com" },
     { "name": "Lance Pollard", "email": "lancejpollard@gmail.com" },
     { "name": "brandondewitt" },
-    { "name": "luk3thomas"  },
-    { "name": "Marcel Klehr" }
+    { "name": "luk3thomas" },
+    { "name": "Marcel Klehr" },
+    { "name": "Raymond Feng" }
   ],
   "dependencies"   : {},
   "devDependencies": {
-    "node.flow": "1.2.3",
-    "should"   : "3.0.1"
+    "mocha" : "1.17.1",
+    "should": "3.1.2"
   },
   "main"      : "./lib/inflection.js",
   "repository": {
@@ -32,6 +33,6 @@
     "url" : "http://en.wikipedia.org/wiki/MIT_License"
   }],
   "scripts": {
-    "test" : "node test/run.js"
+    "test" : "mocha -R spec"
   }
 }
