--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"       : "inflection",
-  "version"    : "1.3.6",
+  "version"    : "1.3.7",
   "description": "A port of inflection-js to node.js module",
   "keywords"   : [
     "inflection", "inflections", "inflection-js", "pluralize" , "singularize",
@@ -12,18 +12,19 @@
     { "name": "Ryan Schuft", "email": "ryan.schuft@gmail.com" },
     { "name": "Ben Lin", "email": "ben@dreamerslab.com" },
     { "name": "Lance Pollard", "email": "lancejpollard@gmail.com" },
-    { "name": "Dane O'Connor", "email": "Dane.OConnor@gmail.com" },
+    { "name": "Dane O'Connor", "email": "dane.oconnor@gmail.com" },
     { "name": "David Miró", "email": "lite.3engine@gmail.com" },
     { "name": "brandondewitt" },
     { "name": "luk3thomas" },
     { "name": "Marcel Klehr" },
     { "name": "Raymond Feng" },
-    { "name": "Kane Cohen", "email": "kanecohen@gmail.com" }
+    { "name": "Kane Cohen", "email": "kanecohen@gmail.com" },
+    { "name": "Gianni Chiappetta", "email": "gianni@runlevel6.org" }
   ],
   "dependencies"   : {},
   "devDependencies": {
     "mocha" : "1.20.1",
-    "should": "4.0.1"
+    "should": "4.0.4"
   },
   "main"      : "./lib/inflection.js",
   "repository": {
