--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,24 @@
 {
   "name": "inflection",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "homepage": "https://github.com/dreamerslab/node.inflection",
+  "description": "JavaScript Inflection Support",
   "authors": [
     "ben <ben@dreamerslab.com>"
   ],
-  "description": "JavaScript Inflection Support",
+  "contributors": [
+    { "name": "Ryan Schuft", "email": "ryan.schuft@gmail.com" },
+    { "name": "Ben Lin", "email": "ben@dreamerslab.com" },
+    { "name": "Lance Pollard", "email": "lancejpollard@gmail.com" },
+    { "name": "Dane O'Connor", "email": "dane.oconnor@gmail.com" },
+    { "name": "David Miró", "email": "lite.3engine@gmail.com" },
+    { "name": "brandondewitt" },
+    { "name": "luk3thomas" },
+    { "name": "Marcel Klehr" },
+    { "name": "Raymond Feng" },
+    { "name": "Kane Cohen", "email": "kanecohen@gmail.com" },
+    { "name": "Gianni Chiappetta", "email": "gianni@runlevel6.org" }
+  ],
   "main": "inflection.min.js",
   "keywords": [
     "inflection",
