--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "inflection",
-  "version": "1.3.7",
+  "version": "1.4.0",
   "homepage": "https://github.com/dreamerslab/node.inflection",
   "description": "JavaScript Inflection Support",
   "authors": [
@@ -17,7 +17,8 @@
     { "name": "Marcel Klehr" },
     { "name": "Raymond Feng" },
     { "name": "Kane Cohen", "email": "kanecohen@gmail.com" },
-    { "name": "Gianni Chiappetta", "email": "gianni@runlevel6.org" }
+    { "name": "Gianni Chiappetta", "email": "gianni@runlevel6.org" },
+    { "name": "konsumer" }
   ],
   "main": "inflection.min.js",
   "keywords": [
