--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"       : "inflection",
-  "version"    : "1.3.8",
+  "version"    : "1.4.0",
   "description": "A port of inflection-js to node.js module",
   "keywords"   : [
     "inflection", "inflections", "inflection-js", "pluralize" , "singularize",
@@ -19,11 +19,12 @@
     { "name": "Marcel Klehr" },
     { "name": "Raymond Feng" },
     { "name": "Kane Cohen", "email": "kanecohen@gmail.com" },
-    { "name": "Gianni Chiappetta", "email": "gianni@runlevel6.org" }
+    { "name": "Gianni Chiappetta", "email": "gianni@runlevel6.org" },
+    { "name": "Eric Brody" }
   ],
   "dependencies"   : {},
   "devDependencies": {
-    "mocha" : "1.20.1",
+    "mocha" : "1.21.4",
     "should": "4.0.4"
   },
   "main"      : "./lib/inflection.js",
