Update bower.json's main to point to unminified source.
Per https://github.com/bower/bower.json-spec, "main" should
"not include minified files." Fixes #34.

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     { "name": "Eric Brody" },
     { "name": "overlookmotel" }
   ],
-  "main": "inflection.min.js",
+  "main": "lib/inflection.js",
   "keywords": [
     "inflection",
     "inflections",
