--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "inflection",
-  "version": "1.5.3",
+  "version": "1.6.0",
   "homepage": "https://github.com/dreamerslab/node.inflection",
   "description": "JavaScript Inflection Support",
   "authors": [
@@ -19,7 +19,9 @@
     { "name": "Kane Cohen", "email": "kanecohen@gmail.com" },
     { "name": "Gianni Chiappetta", "email": "gianni@runlevel6.org" },
     { "name": "Eric Brody" },
-    { "name": "overlookmotel" }
+    { "name": "overlookmotel" },
+    { "name": "Patrick Mowrer" },
+    { "name": "Greger Olsson" }
   ],
   "main": "lib/inflection.js",
   "keywords": [
