--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"       : "inflection",
-  "version"    : "1.7.2",
+  "version"    : "1.8.0",
   "description": "A port of inflection-js to node.js module",
   "keywords"   : [
     "inflection", "inflections", "inflection-js", "pluralize" , "singularize",
@@ -23,12 +23,13 @@
     { "name": "Eric Brody" },
     { "name": "overlookmotel" },
     { "name": "Patrick Mowrer" },
-    { "name": "Greger Olsson" }
+    { "name": "Greger Olsson" },
+    { "name": "Jason Crawford", "email": "jason@jasoncrawford.org" }
   ],
   "dependencies"   : {},
   "devDependencies": {
-    "mocha" : "2.3.3",
-    "should": "7.1.0"
+    "mocha" : "2.3.4",
+    "should": "7.1.1"
   },
   "main"      : "./lib/inflection.js",
   "repository": {
