--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "inflection",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "homepage": "https://github.com/dreamerslab/node.inflection",
   "description": "JavaScript Inflection Support",
   "authors": [
@@ -23,7 +23,9 @@
     { "name": "Patrick Mowrer" },
     { "name": "Greger Olsson" },
     { "name": "Jason Crawford", "email": "jason@jasoncrawford.org" },
-    { "name": "Ray Myers", "email": "ray.myers@gmail.com" }
+    { "name": "Ray Myers", "email": "ray.myers@gmail.com" },
+    { "name": "Dillon Shook", "email": "dshook@alumni.nmt.edu" }
+
   ],
   "main": "lib/inflection.js",
   "keywords": [
