--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"       : "inflection",
-  "version"    : "1.11.0",
+  "version"    : "1.12.0",
   "description": "A port of inflection-js to node.js module",
   "keywords"   : [
     "inflection", "inflections", "inflection-js", "pluralize" , "singularize",
@@ -25,12 +25,13 @@
     { "name": "Patrick Mowrer" },
     { "name": "Greger Olsson" },
     { "name": "Jason Crawford", "email": "jason@jasoncrawford.org" },
-    { "name": "Ray Myers", "email": "ray.myers@gmail.com" }
+    { "name": "Ray Myers", "email": "ray.myers@gmail.com" },
+    { "name": "Dillon Shook", "email": "dshook@alumni.nmt.edu" }
   ],
   "dependencies"   : {},
   "devDependencies": {
-    "mocha" : "3.0.2",
-    "should": "11.1.0"
+    "mocha" : "3.2.0",
+    "should": "11.2.0"
   },
   "main"      : "./lib/inflection.js",
   "repository": {
