--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   ],
   "devDependencies": {
     "mocha": "^8.3.2",
-    "should": "11.2.0"
+    "should": "^13.2.3"
   },
   "main": "./lib/inflection.js",
   "repository": {
