build: ignore irrelevant npm files for smaller publish version

--- a/.npmignore
+++ b/.npmignore
@@ -2,3 +2,11 @@ support
 test
 examples
 *.sock
+
+# Development files
+.github
+
+# Other source files
+bower.json
+component.json
+inflection.min.js
