--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,9 @@
 {
   "name": "inflection",
-  "version": "1.12.0",
+  "version": "1.13.0",
   "homepage": "https://github.com/dreamerslab/node.inflection",
   "description": "JavaScript Inflection Support",
-  "authors": [
-    "ben <ben@dreamerslab.com>"
-  ],
+  "authors": ["ben <ben@dreamerslab.com>"],
   "contributors": [
     { "name": "Ryan Schuft", "email": "ryan.schuft@gmail.com" },
     { "name": "Ben Lin", "email": "ben@dreamerslab.com" },
@@ -25,7 +23,6 @@
     { "name": "Jason Crawford", "email": "jason@jasoncrawford.org" },
     { "name": "Ray Myers", "email": "ray.myers@gmail.com" },
     { "name": "Dillon Shook", "email": "dshook@alumni.nmt.edu" }
-
   ],
   "main": "lib/inflection.js",
   "keywords": [
@@ -48,11 +45,5 @@
     "ordinalize"
   ],
   "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+  "ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"]
 }
