chore: add myself as contributor

--- a/package.json
+++ b/package.json
@@ -85,6 +85,10 @@
     {
       "name": "Dillon Shook",
       "email": "dshook@alumni.nmt.edu"
+    },
+    {
+      "name": "Patrick Kuen",
+      "email": "p.kuen@cloudacy.com"
     }
   ],
   "devDependencies": {
