--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     }
   ],
   "devDependencies": {
-    "terser": "^5.15.0",
+    "typescript": "^4.8.3",
     "vitest": "^0.23.4"
   },
   "main": "./lib/inflection.js",
@@ -100,12 +100,11 @@
     "type": "git",
     "url": "https://github.com/dreamerslab/node.inflection.git"
   },
-  "engines": [
-    "node >= 0.4.0"
-  ],
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "license": "MIT",
   "scripts": {
-    "test": "vitest",
-    "minify": "terser lib/inflection.js -o inflection.min.js -c -m"
+    "test": "vitest"
   }
 }
