chore: add prepublishOnly script to ensure correct publishing of the package

--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "test": "vitest"
+    "test": "vitest",
+    "prepublishOnly": "npm run test -- --run && npm run build"
   }
 }
